outputs/tsp_constructive-constructive/mcts-ahd/2025-09-28_08-09-19/evaluations/problem_eval2835251829682648428_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring by combining immediate distance, future connectivity, and destination proximity with adaptive penalties, using a reinforcement learning-inspired approach where node selection is influenced by both local and global factors, with a focus on balancing exploration and exploitation through decaying weights and novelty bonuses.}
                                                                                                                                                                                                                                                                                                                                                          ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance scoring by combining immediate distance, future connectivity, and destination proximity with adaptive penalties, using a reinforcement learning-inspired approach where node selection is influenced by both local and global factors, with a focus on balancing exploration and exploitation through decaying weights and novelty bonuses.}
                                                                                                                                                                                                                                                                                                                                                          ^
SyntaxError: unmatched '}'
